--- a/public/index.html
+++ b/public/index.html
@@ -2,39 +2,45 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title>AR-каталог одежды</title>
+  <title>AR примерка</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
+
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background: #000;
+      font-family: system-ui, sans-serif;
+    }
+    #ar-container {
+      position: fixed;
+      inset: 0;
+    }
+    #hint {
+      position: fixed;
+      left: 50%;
+      bottom: 16px;
+      transform: translateX(-50%);
+      padding: 8px 14px;
+      background: rgba(0, 0, 0, 0.6);
+      color: #fff;
+      border-radius: 8px;
+      font-size: 14px;
+      z-index: 10;
+    }
+  </style>
+
+  <!-- THREE и MindAR (UMD) -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-three.prod.js"></script>
 </head>
 <body>
-  <main>
-    <h1>AR-каталог одежды</h1>
+  <div id="ar-container"></div>
+  <div id="hint">Наведи камеру на маркер</div>
 
-    <section id="catalog">
-      <div class="item" data-id="dress1">
-        <h2>Платье 1</h2>
-        <button class="try-on-btn">Примерить</button>
-      </div>
-
-      <div class="item" data-id="dress2">
-        <h2>Платье 2</h2>
-        <button class="try-on-btn">Примерить</button>
-      </div>
-
-      <!-- добавишь остальные образы -->
-    </section>
-
-    <section>
-      <h3>Как пользоваться</h3>
-      <ol>
-        <li>Скачай и распечатай маркер.</li>
-        <li>Выбери образ и нажми «Примерить».</li>
-        <li>Наведи камеру телефона на маркер.</li>
-      </ol>
-      <a href="mindar/targets.png" download>Скачать маркер</a>
-    </section>
-  </main>
-
-  <script type="module" src="js/catalog.js"></script>
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
