--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <title>AR примерка</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- importmap для three + GLTFLoader + mindar -->
+  <script type="importmap">
+  {
+    "imports": {
+      "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
+      "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/",
+      "mindar-image-three": "https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-three.prod.js"
+    }
+  }
+  </script>
 
   <style>
     html, body {
@@ -13,34 +24,49 @@
       height: 100%;
       overflow: hidden;
       background: #000;
-      font-family: system-ui, sans-serif;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      color: #fff;
     }
-    #ar-container {
+
+    #container {
       position: fixed;
       inset: 0;
     }
-    #hint {
+
+    #ui-overlay {
       position: fixed;
-      left: 50%;
-      bottom: 16px;
-      transform: translateX(-50%);
-      padding: 8px 14px;
-      background: rgba(0, 0, 0, 0.6);
-      color: #fff;
-      border-radius: 8px;
-      font-size: 14px;
+      inset: 0;
+      pointer-events: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      padding: 12px;
+      box-sizing: border-box;
       z-index: 10;
     }
-  </style>
 
-  <!-- THREE и MindAR (UMD) -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-three.prod.js"></script>
+    #hint {
+      align-self: center;
+      background: rgba(0, 0, 0, 0.7);
+      padding: 8px 14px;
+      border-radius: 999px;
+      font-size: 14px;
+      pointer-events: none;
+      max-width: 90%;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-  <div id="ar-container"></div>
-  <div id="hint">Наведи камеру на маркер</div>
+  <!-- контейнер для MindAR -->
+  <div id="container"></div>
 
-  <script type="module" src="js/main.js"></script>
+  <!-- оверлей с подсказкой -->
+  <div id="ui-overlay">
+    <div id="hint">Инициализация камеры…</div>
+  </div>
+
+  <!-- AR-логика -->
+  <script type="module" src="./ar.js"></script>
 </body>
 </html>
