--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <title>AR примерка одежды</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- three + GLTFLoader + mindar -->
   <script type="importmap">
   {
     "imports": {
