--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
   <title>AR примерка одежды</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- three + GLTFLoader + mindar -->
   <script type="importmap">
   {
     "imports": {
@@ -54,6 +53,53 @@
       pointer-events: none;
       max-width: 90%;
       text-align: center;
+      margin-bottom: 10px;
+    }
+
+    #outfit-menu {
+      align-self: center;
+      pointer-events: auto;
+      background: rgba(0, 0, 0, 0.8);
+      border-radius: 16px;
+      padding: 12px 14px;
+      box-sizing: border-box;
+      border: 1px solid rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(6px);
+      max-width: 90%;
+      width: 360px;
+      display: none; /* по умолчанию скрыто */
+    }
+
+    #outfit-title {
+      margin: 0 0 8px 0;
+      font-size: 15px;
+      font-weight: 600;
+      text-align: center;
+    }
+
+    #outfit-buttons {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      justify-content: center;
+    }
+
+    .outfit-btn {
+      flex: 1 1 30%;
+      min-width: 90px;
+      padding: 6px 8px;
+      border-radius: 999px;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      background: rgba(255, 255, 255, 0.06);
+      color: #fff;
+      font-size: 13px;
+      cursor: pointer;
+      text-align: center;
+    }
+
+    .outfit-btn.active {
+      border-color: #22c55e;
+      background: rgba(34, 197, 94, 0.2);
     }
   </style>
 </head>
@@ -62,6 +108,16 @@
 
   <div id="ui-overlay">
     <div id="hint">Инициализация камеры…</div>
+
+    <div id="outfit-menu">
+      <p id="outfit-title">Выбери образ</p>
+      <div id="outfit-buttons">
+        <button class="outfit-btn" data-outfit="base">Стоковый</button>
+        <button class="outfit-btn" data-outfit="casual">Повседневная</button>
+        <button class="outfit-btn" data-outfit="formal">Официальная</button>
+        <button class="outfit-btn" data-outfit="dress">Платье</button>
+      </div>
+    </div>
   </div>
 
   <script type="module" src="./ar.js"></script>
